Updated CSS for hello bar sticky

--- a/assets/css/cpt-hello-bar.css
+++ b/assets/css/cpt-hello-bar.css
@@ -28,7 +28,7 @@
 
 .hello-bar-slider.swiper-container { 
     overflow: hidden; 
-    position: relative; 
+    position: sticky; 
     z-index: 11;
 }
 
