Modified code for when hamburger open then fix z-index

--- a/assets/css/cpt-hello-bar.css
+++ b/assets/css/cpt-hello-bar.css
@@ -104,4 +104,7 @@
         padding: 10px;
         font-size: 16px;
     }
+    .mobile-toggled .hello-bar-slider.swiper-container { 
+        z-index: 10;
+    }
 }
